[project]
name = "sandbox-py"
version = "0.1.0"
description = "Python sandbox"
authors = [
    { name = "H1rono", email = "hronok66@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "hello:hello"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.8",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Inherit rules from pycodestyle, pyflakes, flake8-simplify, isort
select = ["F", "E", "SIM", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
