[project]
name = "sandbox-py"
version = "0.1.0"
description = "Python sandbox"
authors = [
    { name = "H1rono", email = "hronok66@gmail.com" }
]
dependencies = [
    "aiohttp>=3.9.5",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "hello:hello"
aiohttp-serve = "aiohttp_sand:serve"
aiohttp-polls = "polls:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12.20240311",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Inherit rules from pycodestyle, pyflakes, flake8-simplify, isort
select = ["F", "E", "SIM", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
